@@ -502,9 +502,8 @@ printProcInfo(const tkm::msg::monitor::ProcInfo &info, uint64_t systemTime, uint
     entry["ctx_name"] = procEntry.ctx_name();
     entry["cpu_time"] = procEntry.cpu_time();
     entry["cpu_percent"] = procEntry.cpu_percent();
-    entry["mem_vmsize"] = procEntry.mem_vmsize();
-    entry["mem_vmrss"] = procEntry.mem_vmrss();
-    entry["mem_shared"] = procEntry.mem_shared();
+    entry["mem_rss"] = procEntry.mem_rss();
+    entry["mem_pss"] = procEntry.mem_pss();
     head[std::to_string(procEntry.pid())] = entry;
   }
 
@@ -530,8 +529,8 @@ static void printContextInfo(const tkm::msg::monitor::ContextInfo &info,
     entry["ctx_name"] = ctxEntry.ctx_name();
     entry["total_cpu_time"] = ctxEntry.total_cpu_time();
     entry["total_cpu_percent"] = ctxEntry.total_cpu_percent();
-    entry["total_mem_vmrss"] = ctxEntry.total_mem_vmrss();
-    entry["total_mem_shared"] = ctxEntry.total_mem_shared();
+    entry["total_mem_rss"] = ctxEntry.total_mem_rss();
+    entry["total_mem_pss"] = ctxEntry.total_mem_pss();
     head[ctxEntry.ctx_name()] = entry;
   }
 
