@@ -1,3 +1,6 @@
+* Thu Jun 7 2023 Alin Popa <alin.popa@fxdata.ro> - 1.6.0
+- read RSS and PSS for process memory info
+
 * Thu Jan 26 2023 Alin Popa <alin.popa@fxdata.ro> - 1.5.7
 - Bug fixes
 
